fix(ui): events links tools visibility, in lieu logo size in mobile

--- a/web/css/index.css
+++ b/web/css/index.css
@@ -326,7 +326,7 @@ ul.menu_action li a
 
 ul.menu_action li a.signaler, ul.menu_action li a.ical
 {
-   color:#e0e0e0;
+    color:#a6a5a5;
 }
 
 ul.menu_action li a.signaler:hover, ul.menu_action li a.signaler:active,
