--- a/web/css/mobile.css
+++ b/web/css/mobile.css
@@ -241,7 +241,7 @@ display:none;
 
 #entete_contenu img.logo
 {
-    width: 40%;
+    /*    width: 40%;*/
     height: 100%;
 }
 
